test/scc/decl/semantic-errors/067.a
067.t:1:5: error: function returning array is not allowed